--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,67 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ResumeApp</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+  
+    <title>DM - Resume Portfolio</title>
+    
+    <base href="/">
+  
+    <!-- CSS -->
+    <!-- Bootstrap core CSS -->
+    <link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  
+    <!-- Owl Carousel -->
+    <link href="../assets/css/owl.theme.css" rel="stylesheet">
+    <link href="../assets/css/owl.carousel.css" rel="stylesheet">
+  
+    <!-- Magnific-popup lightbox -->
+    <link href="../assets/css/magnific-popup.css" rel="stylesheet">
+  
+    <!-- Simple text rotator -->
+    <link href="../assets/css/simpletextrotator.css" rel="stylesheet">
+  
+    <!-- Font Awesome CSS -->
+    <link href="../assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
+  
+    <!-- Animate css -->
+    <link href="../assets/css/animate.css" rel="stylesheet">
+  
+    <!-- Custom styles CSS -->
+    <link href="../assets/css/style.css" rel="stylesheet" media="screen">
+  </head>
 <body>
   <app-root></app-root>
+
+  	<!-- Javascript files -->
+	<!-- jQuery -->
+	<script src="../assets/js/jquery-1.11.0.min.js"></script>
+	<!-- Bootstrap JS -->
+	<script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+	<!-- Background slider -->
+	<script src="../assets/js/jquery.backstretch.min.js"></script>
+	<!-- OwlCarousel -->
+	<script src="../assets/js/owl.carousel.min.js"></script>
+	<!-- Modal for portfolio -->
+	<script src="../assets/js/jquery.magnific-popup.min.js"></script>
+	<!-- Text rotator -->
+	<script src="../assets/js/jquery.simple-text-rotator.min.js"></script>
+	<!-- Waypoints -->
+	<script src="../assets/js/jquery.waypoints.js"></script>
+	<!-- CountTo -->
+	<script src="../assets/js/jquery.countTo.js"></script>
+	<!-- WOW - Reveal Animations When You Scroll -->
+	<script src="../assets/js/wow.min.js"></script>
+	<!-- Smooth scroll -->
+	<script src="../assets/js/smoothscroll.js"></script>
+	<!-- Fitvids -->
+	<script src="../assets/js/jquery.fitvids.js"></script>
+	<!-- jqBootstrapValidation -->
+	<script src="../assets/js/jqBootstrapValidation.js"></script>
+	<!-- Custom scripts -->
+	<script src="../assets/js/custom.js"></script>
 </body>
 </html>
